v2/bases/system/argocd/argocd-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-ui
  namespace: istio-namespace1
spec:
  hosts:
  - argocd.byeon.ca
  gateways:
  - istio-namespace1/pub-lb
  http:
  - name: "argocd"
    route:
    - destination:
        port:
          number: 80
        host: argocd-server.argocd.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: argocd-ui
  namespace: istio-namespace1
spec:
  host: argocd-server.argocd.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
    tls:
      mode: DISABLE
